fix: on mobile, page width oversized when logged in, closes #27

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,13 +33,12 @@
 }
 
 .toolbar-user-name {
-  visibility: visible;
   font-size: 80%;
 }
 
 @media (max-width: 499px) {
   .toolbar-user-name {
-    visibility: hidden;
+    display: none;
     width: 0px;
     height: 0px;
   }
